# mapf

./: .gitignore  Cargo.toml  DEPLOYMENT.md  IMPLEMENTATION_SUMMARY.md  README.md  Taskfile.yaml  package-lock.json  package.json  svelte.config.js  wrangler.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
backend/: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
backend/migrations/: 20260112000001_create_users.sql  20260112000002_create_api_keys.sql  20260112000003_create_solver_submissions.sql  20260112000004_create_verification_results.sql
backend/src/: auth.rs  config.rs  db.rs  error.rs  executor.rs  main.rs  validation.rs
backend/src/api/: auth.rs  leaderboard.rs  mod.rs  solver.rs
frontend/: .env.example  .prettierignore  package-lock.json  package.json  vite.config.ts
frontend/scripts/: prepare-maps.js
frontend/src/: app.d.ts  app.html
frontend/src/lib/: index.ts  jco-stub.ts  parser.test.ts  parser.ts  types.ts  validation.test.ts  validation.ts
frontend/src/lib/api/: client.ts  index.ts
frontend/src/lib/components/: MapViewer.svelte  MapViewer.test.ts
frontend/src/lib/solver/: index.ts  jco-loader.ts  runner.test.ts  runner.ts  solver.worker.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/arena/: +page.svelte
frontend/src/routes/docs/: +page.svelte
frontend/src/routes/leaderboard/: +page.svelte
frontend/src/routes/upload/: +page.svelte
frontend/static/maps/: index.json
frontend/tests/: app.test.ts  arena.test.ts  upload.test.ts
solvers/mapf-astar/: Cargo.toml
solvers/mapf-astar/src/: astar.rs  lib.rs  wasm.rs
solvers/mapf-astar/tests/: astar_tests.rs
solvers/mapf-core/: Cargo.toml
solvers/mapf-core/frontend/: package.json
solvers/mapf-core/src/: lib.rs  map.rs  scenario.rs
solvers/mapf-core/tests/: parser_tests.rs
solvers/mapf-test-component/: Cargo.toml  component.wasm  embedded.wasm
solvers/mapf-test-component/src/: lib.rs
solvers/wit/: mapf-solver.wit
