[package]
name = "mapf-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros", "multipart"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util", "timeout", "limit"] }
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }

# WASM execution
wasmtime = { version = "26", features = ["component-model", "cranelift"] }
wasmtime-wasi = "26"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "macros", "migrate", "uuid", "chrono"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Authentication
argon2 = "0.5"
rand = "0.8"
sha2 = "0.10"

# Tracing/logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Configuration
dotenvy = "0.15"

# Shared MAPF types
mapf-core = { path = "../solvers/mapf-core" }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json", "multipart"] }
tempfile = "3"
