[package]
name = "mapf-astar"
version = "0.1.0"
edition = "2021"
description = "Reference A* solver for MAPF arena"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
mapf-core = { path = "../mapf-core" }

[dev-dependencies]
pretty_assertions = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
