[package]
name = "mapf-core"
version = "0.1.0"
edition = "2021"
description = "Core MAPF types and MovingAI parser"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
thiserror = "2.0.17"

[dev-dependencies]
pretty_assertions = "1"

[features]
default = []

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
